add bootstrap scripts

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -20,6 +20,8 @@
 
     <!-- Custom styles for this template -->
     <link href="theme.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
 
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzA8elngCIfvrV0vtj2IrP6AkEVjGQyNM"></script>
