change path for navbar

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -311,8 +311,8 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="trending.html">Trending</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="./web/trending.html">Trending</a></li>
+              <li><a href="./web/about.html">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
