--- a/web/views/about.html
+++ b/web/views/about.html
@@ -43,11 +43,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Business Finder</a>
+            <a class="navbar-brand" href="">Business Finder</a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="">Home</a></li>
               <li><a href="trending.html">Trending</a></li>
               <li class="active"><a href="#">About</a></li>
             </ul>
