--- a/web/views/trending.html
+++ b/web/views/trending.html
@@ -46,11 +46,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Business Finder</a>
+            <a class="navbar-brand" href="">Business Finder</a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="">Home</a></li>
               <li class="active"><a href="#">Trending</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
