--- a/web/views/trending.html
+++ b/web/views/trending.html
@@ -63,7 +63,7 @@
 	
 	<div class="popular">
 	<small><a href='http://blogs.voanews.com/all-about-america/2015/05/18/top-10-most-popular-ethnic-cuisines-in-us/'>(Taken from a news article on Voice of America)</a></small>
-	<h2>Popular Ethnic Cuisines in the US&emsp;<img src="food.jpg" alt="Image of Food" style="width:50px;height:50px;"></h2>
+	<h2>Popular Ethnic Cuisines in the US&emsp;<img src="./images/food.jpg" alt="Image of Food" style="width:50px;height:50px;"></h2>
 		<ol>
 			<li>Chinese</li>
 			<li>Mexican</li>
@@ -80,7 +80,7 @@
 
 	<div class="popular">
 	<small><a href='http://learningenglish.voanews.com/a/top-25-cities-in-america/2744774.html'>(Taken from a news article on Voice of America)</a></small>
-	<h2>Popular Cities in the US&emsp;<img src="city.jpg" alt="Image of City" style="width:50px;height:50px;"></h2>
+	<h2>Popular Cities in the US&emsp;<img src="./images/city.jpg" alt="Image of City" style="width:50px;height:50px;"></h2>
 	  	<ol>
 			<li>New York, NY</li>
 			<li>Chicago, IL</li>
