--- a/web/views/about.html
+++ b/web/views/about.html
@@ -58,7 +58,7 @@
       <div class = "info">
         <h2>About the Website</h2>
 
-        <p style="text-align:center;"><img src="money.png" alt="Money is Happiness" style="width:200px;height:200px;"></p>
+        <p style="text-align:center;"><img src="./images/money.png" alt="Money is Happiness" style="width:200px;height:200px;"></p>
         <p style="margin-left:10%; margin-right:15%"> Ever unsure of where you wanted to eat? Wanted to use Yelp but felt overwhelmed by the number of options? Don't have enough money to spend? Business Finder is the website for you then! With Business Finder, you enter a search term, answer a few questions, and get three businesses to choose from. Business Finder uses Yelp's Fusion API to give you the best match of restaurants and 
         experiences for your needs. Since it only gives you three choices, you can be more decisive about your choice 
         as you no longer need to scroll through pages and pages of results. The more wisely you spend your money, the happier 
